Bug 509515 - GTK theme not applied to GSettings in fresh installs
Summary: GTK theme not applied to GSettings in fresh installs
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: gtk theme (other bugs)
Version First Reported In: 6.4.80
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 446572 503396 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-09-15 12:12 UTC by Fabian Vogt
Modified: 2025-09-20 10:02 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.6
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabian Vogt 2025-09-15 12:12:15 UTC
On fresh installations, gsettings get org.gnome.desktop.interface gtk-theme returns 'Adwaita'.
While on X11, GTK applications still look at settings.ini or xsettings, on Wayland this is not the case. The result is  that applications like Firefox use the wrong theme in a Plasma Wayland sesson.

Also seen by openQA: https://openqa.opensuse.org/tests/5309192#step/firefox/29 (X11) vs. https://openqa.opensuse.org/tests/5308748#step/firefox/29 (Wayland)
Comment 1 Bug Janitor Service 2025-09-15 12:26:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kde-gtk-config/-/merge_requests/135
Comment 2 Fabian Vogt 2025-09-15 12:50:45 UTC
Git commit 6c00c6cfaac019581683f875572eb376757ddf39 by Fabian Vogt.
Committed on 15/09/2025 at 12:14.
Pushed by fvogt into branch 'master'.

kconf_update: Call g_settings_sync() explicitly

The code from the kded module uses a compression timer to sync only every
100ms, but in the kconf_update executable there is no event loop so this
will never happen. Do it explicitly.

M  +3    -0    kconf_update/gtktheme.cpp

https://invent.kde.org/plasma/kde-gtk-config/-/commit/6c00c6cfaac019581683f875572eb376757ddf39
Comment 3 Fabian Vogt 2025-09-15 12:51:23 UTC
Git commit 8e2969ef4e64aea62c9edb62661d6fad7947dd23 by Fabian Vogt.
Committed on 15/09/2025 at 12:51.
Pushed by fvogt into branch 'Plasma/6.4'.

kconf_update: Call g_settings_sync() explicitly

The code from the kded module uses a compression timer to sync only every
100ms, but in the kconf_update executable there is no event loop so this
will never happen. Do it explicitly.


(cherry picked from commit 6c00c6cfaac019581683f875572eb376757ddf39)

Co-authored-by: Fabian Vogt <fabian@ritter-vogt.de>

M  +3    -0    kconf_update/gtktheme.cpp

https://invent.kde.org/plasma/kde-gtk-config/-/commit/8e2969ef4e64aea62c9edb62661d6fad7947dd23
Comment 4 Nate Graham 2025-09-19 02:37:47 UTC
*** Bug 446572 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2025-09-19 02:37:50 UTC
*** Bug 503396 has been marked as a duplicate of this bug. ***