kconf_update: Call g_settings_sync() explicitly

The code from the kded module uses a compression timer to sync only every
100ms, but in the kconf_update executable there is no event loop so this
will never happen. Do it explicitly.

BUG: 509515


(cherry picked from commit 6c00c6cfaac019581683f875572eb376757ddf39)

Co-authored-by: Fabian Vogt <fabian@ritter-vogt.de>